<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="275dp"
    android:paddingTop="150dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/bg"
                android:orientation="vertical">

                <!--one-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="@color/textcolor"
                    android:orientation="vertical">


                    <!--one.one-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="10dp"
                            android:paddingLeft="30dp">

                            <com.mxicoders.skepci.font.MyTextviewBold
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/task"
                                android:textAllCaps="true"
                                android:gravity="center|left|top"
                                android:textStyle="normal|bold"
                                android:textColor="@color/edittext_color"/>

                            <com.mxicoders.skepci.font.MyTextViewRegular
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/complete"
                                android:gravity="center|left|top"
                                android:textStyle="normal"
                                android:paddingLeft="4dp"
                                android:textColor="@color/edittext_color"/>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.mxicoders.skepci.font.MyTextviewBold
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/complete_dec"
                                android:gravity="center"
                                android:textStyle="normal|bold"
                                android:textColor="@color/edittext_color"/>


                        </LinearLayout>


                    </LinearLayout>
                    <!--one.one end-->

                </LinearLayout>
                <!--one end-->

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>